--- a/web/index.html
+++ b/web/index.html
@@ -19,6 +19,9 @@
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="A new Flutter project.">
+  
+  <!-- Google Sign-In Client ID -->
+  <meta name="google-signin-client_id" content="165353650541-qqvvvvvvvvvvvvvvvvvvvvvvvvvvvvv.apps.googleusercontent.com">
 
   <!-- iOS meta tags & icons -->
   <meta name="mobile-web-app-capable" content="yes">
@@ -33,6 +36,40 @@
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
+
+  <script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/11.6.0/firebase-app.js";
+    import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.6.0/firebase-analytics.js";
+    import { getAuth } from "https://www.gstatic.com/firebasejs/11.6.0/firebase-auth.js";
+    import { getFirestore } from "https://www.gstatic.com/firebasejs/11.6.0/firebase-firestore.js";
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+  
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    const firebaseConfig = {
+      apiKey: "AIzaSyDGB7GjIEYGwThlky6HPq-7RazZOBRMgoQ",
+      authDomain: "beeflow-93ea2.firebaseapp.com",
+      databaseURL: "https://beeflow-93ea2-default-rtdb.firebaseio.com",
+      projectId: "beeflow-93ea2",
+      storageBucket: "beeflow-93ea2.firebasestorage.app",
+      messagingSenderId: "165353650541",
+      appId: "1:165353650541:web:8411259ab7c4ee1f5a4264",
+      measurementId: "G-DRYF5DQCEZ"
+    };
+  
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const analytics = getAnalytics(app);
+    const auth = getAuth(app);
+    const firestore = getFirestore(app);
+  </script>
+
+  <!-- Google Sign-In Script -->
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
+  <meta name="google-signin-client_id" content="165353650541-qqvvvvvvvvvvvvvvvvvvvvvvvvvvvvv.apps.googleusercontent.com">
+
   <script src="flutter_bootstrap.js" async></script>
 </body>
 </html>
